the Blog App has been Completed

--- a/templates/main/teacher_sing_up.html
+++ b/templates/main/teacher_sing_up.html
@@ -170,7 +170,7 @@
                 <select id="studyfields" name="field_of_study" class="form-select">
                     <option value="">🔽 لطفاً یک رشته انتخاب کنید</option>
                     {% for study in studyfields %}
-                    <option value="{{ study.name }}" > {{study.name}} </option>
+                    <option value="{{ study.id }}" > {{study.name}} </option>
                     {% endfor %}
                 </select>
             
